# workflow-engine

./: README.md  demo-add.html  demo-sum.html  demo.html  demo_sum.html  demosum.html  design.md  fix.md  kan-153-ques1.html  kan-154-demo.html  kan-155.html  kan172_test.html  output.html  q44.html  question12.html  question2.html  result.html  sum.html  test_add.html  test_divide.html  test_multiply.html  test_sum.html
backend/: .env  .env.example  .gitignore  EXAMPLE_USAGE.md  alembic.ini  complex_sum.html  demo-add.html  demo-divide.html  demo-multiply.html  demo-sub.html  demo-subtract.html  demo-sum.html  demo-tough.html  demo.html  demo_add.html  demo_output.html  demo_sub.html  demo_sum.html  pyproject.toml  ques1.html  ques2.html  ques4.html  question.html  question11.html  question12.html  question3.html  question4.html  question5.html  question6.html  question7.html  question8.html  question9.html  requirements.txt  result.html  sum.html
backend/alembic/: env.py
backend/alembic/versions/: 20260501_0001_initial_postgresql_schema.py
backend/app/: __init__.py  exceptions.py  main.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/models/: __init__.py  base.py  domain.py  user.py  workflow.py
backend/app/repositories/: domain_repo.py  user_repo.py  workflow_repo.py
backend/app/schemas/: domain.py  user.py  workflow.py
backend/app/services/: user_service.py  workflow_service.py
backend/app/utils/: __init__.py  logger.py  validate_workflow.py
backend/static/: index.html  test.txt
backend/tests/: test_workflow_config.py
(+73 files in other folders)
