[project]
name = "workflow-engine-api"
version = "0.1.0"
description = "Generic FastAPI Workflow Engine API"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
